Replace mascot image with mascot2

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ body::after{
 
 <div class="hero">
 
-  <img src="mascot.png" alt="Mascot">
+  <img src="mascot2.png" alt="Mascot">
 
   <div class="hero-text">
     <h1>soft gothic. hand altered.</h1>
