--- a/index.html
+++ b/index.html
@@ -9,42 +9,35 @@
 <style>
 
 :root{
-  --pink:#ff5c8d;
+  --pink:#d14b8f; /* purplish pink */
+  --lightpink:#f8e6f1;
   --black:#000;
-  --white:#fff;
 }
 
 /* BASE */
 
 body{
   margin:0;
-  background:white;
   font-family:'Eater', cursive;
+  background:#fdf6fb;
+  background-image: radial-gradient(#f3cce3 1px, transparent 1px);
+  background-size: 22px 22px;
   overflow-x:hidden;
   color:black;
 }
 
-/* Lace top & bottom */
+/* REAL LACE BORDER (SVG) */
 
-body::before{
-  content:"✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦";
+.lace-top, .lace-bottom{
   position:fixed;
-  top:0;
+  left:0;
   width:100%;
-  text-align:center;
-  color:var(--pink);
-  font-size:14px;
+  height:30px;
+  z-index:20;
 }
 
-body::after{
-  content:"✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦";
-  position:fixed;
-  bottom:0;
-  width:100%;
-  text-align:center;
-  color:var(--pink);
-  font-size:14px;
-}
+.lace-top{ top:0; }
+.lace-bottom{ bottom:0; transform:rotate(180deg); }
 
 /* TOP BAR */
 
@@ -52,17 +45,19 @@ body::after{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:30px 40px;
+  padding:35px 50px;
+  position:relative;
+  z-index:5;
 }
 
 .brand{
-  font-size:30px;
-  letter-spacing:4px;
+  font-size:32px;
+  letter-spacing:5px;
 }
 
 .right-icons{
   display:flex;
-  gap:25px;
+  gap:28px;
   align-items:center;
 }
 
@@ -88,26 +83,38 @@ body::after{
 .sidebar{
   position:fixed;
   top:0;
-  left:-320px;
-  width:320px;
+  left:-260px;
+  width:300px;
   height:100%;
-  background:black;
-  padding-top:110px;
+  background:var(--pink);
+  padding-top:120px;
   transition:0.4s;
-  z-index:10;
+  z-index:15;
+  box-shadow:4px 0 20px rgba(0,0,0,0.2);
+}
+
+/* Sidebar sticks out slightly */
+.sidebar::after{
+  content:"";
+  position:absolute;
+  right:-25px;
+  top:0;
+  width:25px;
+  height:100%;
+  background:var(--pink);
 }
 
 .sidebar a{
   display:block;
   color:white;
-  padding:22px 40px;
+  padding:24px 40px;
   text-decoration:none;
   font-size:20px;
   letter-spacing:2px;
 }
 
 .sidebar a:hover{
-  background:rgba(255,92,141,0.2);
+  background:rgba(255,255,255,0.15);
 }
 
 .sidebar.active{
@@ -119,63 +126,68 @@ body::after{
   inset:0;
   background:rgba(0,0,0,0.4);
   display:none;
-  z-index:5;
+  z-index:10;
 }
 
 .overlay.active{
   display:block;
 }
 
-/* HERO LAYOUT */
+/* Lace edge on sidebar */
+
+.sidebar::before{
+  content:"";
+  position:absolute;
+  right:0;
+  top:0;
+  width:6px;
+  height:100%;
+  background:white;
+  opacity:0.4;
+}
+
+/* HERO */
 
 .hero{
   display:flex;
   justify-content:center;
   align-items:center;
-  gap:80px;
-  padding:100px 60px;
+  gap:60px;
+  padding:120px 60px;
   position:relative;
 }
 
-/* Vertical lace detail */
-
-.lace-vertical{
-  position:fixed;
-  left:15px;
-  top:0;
-  height:100%;
-  writing-mode:vertical-rl;
-  text-orientation:upright;
-  color:var(--pink);
-  font-size:12px;
-  opacity:0.5;
-}
-
-/* Mascot */
+/* BIGGER mascot */
 
 .hero img{
-  width:420px;
-  max-width:45vw;
+  width:520px;
+  max-width:50vw;
   animation:float 4s ease-in-out infinite;
-  filter:drop-shadow(0 0 30px rgba(255,92,141,0.4));
+  filter:drop-shadow(0 0 35px rgba(209,75,143,0.45));
+  position:relative;
+  left:-40px; /* slight overlap */
+  z-index:3;
 }
 
-/* Floating */
+/* Float */
 
 @keyframes float{
   0%{transform:translateY(0px);}
-  50%{transform:translateY(-15px);}
+  50%{transform:translateY(-18px);}
   100%{transform:translateY(0px);}
 }
 
-/* Text block */
+/* Text block overlaps */
 
 .hero-text{
-  max-width:320px;
+  max-width:340px;
+  position:relative;
+  left:-80px;
+  z-index:1;
 }
 
 .hero-text h1{
-  font-size:28px;
+  font-size:30px;
   letter-spacing:3px;
 }
 
@@ -183,13 +195,13 @@ body::after{
   margin-top:25px;
   font-size:14px;
   line-height:1.7;
-  color:#444;
+  color:#555;
 }
 
 /* Rotating feature */
 
 .feature-box{
-  margin-top:40px;
+  margin-top:45px;
   position:relative;
   height:50px;
 }
@@ -206,21 +218,21 @@ body::after{
   opacity:1;
 }
 
-/* Mobile */
+/* MOBILE */
 
 @media(max-width:900px){
   .hero{
     flex-direction:column;
     text-align:center;
-    gap:40px;
   }
 
   .hero img{
-    width:280px;
+    width:320px;
+    left:0;
   }
 
-  .lace-vertical{
-    display:none;
+  .hero-text{
+    left:0;
   }
 }
 
@@ -228,6 +240,15 @@ body::after{
 </head>
 
 <body>
+
+<!-- Lace SVG Top -->
+<svg class="lace-top" viewBox="0 0 1440 40" preserveAspectRatio="none">
+  <path fill="#d14b8f" d="M0,20 Q20,0 40,20 T80,20 T120,20 T160,20 T200,20 T240,20 T280,20 T320,20 T360,20 T400,20 T440,20 T480,20 T520,20 T560,20 T600,20 T640,20 T680,20 T720,20 T760,20 T800,20 T840,20 T880,20 T920,20 T960,20 T1000,20 T1040,20 T1080,20 T1120,20 T1160,20 T1200,20 T1240,20 T1280,20 T1320,20 T1360,20 T1400,20 L1440,40 L0,40 Z"/>
+</svg>
+
+<svg class="lace-bottom" viewBox="0 0 1440 40" preserveAspectRatio="none">
+  <path fill="#d14b8f" d="M0,20 Q20,0 40,20 T80,20 T120,20 T160,20 T200,20 T240,20 T280,20 T320,20 T360,20 T400,20 T440,20 T480,20 T520,20 T560,20 T600,20 T640,20 T680,20 T720,20 T760,20 T800,20 T840,20 T880,20 T920,20 T960,20 T1000,20 T1040,20 T1080,20 T1120,20 T1160,20 T1200,20 T1240,20 T1280,20 T1320,20 T1360,20 T1400,20 L1440,40 L0,40 Z"/>
+</svg>
 
 <div class="overlay" onclick="closeMenu()"></div>
 
@@ -246,19 +267,18 @@ body::after{
     <div class="icon" onclick="openMenu()">☰</div>
     <div class="icon heart">♡</div>
 
-    <!-- Outline bag -->
     <svg class="bag" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="1.8">
       <path d="M6 8h12l-1 12H7L6 8z"/>
       <path d="M9 8V6a3 3 0 016 0v2"/>
     </svg>
 
-    <a href="about.html" class="icon">?</a>
+    <div class="icon">?</div>
   </div>
 </div>
 
 <div class="hero">
 
-  <img src="mascot2.png" alt="Mascot">
+  <img src="mascot.png" alt="Mascot">
 
   <div class="hero-text">
     <h1>soft gothic. hand altered.</h1>
@@ -272,10 +292,6 @@ body::after{
     </div>
   </div>
 
-</div>
-
-<div class="lace-vertical">
-✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦ ✧ ✦
 </div>
 
 <script>
