--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>gnawed</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
-
-<style>
-
 :root{
-  --pink:#d14b8f; /* purplish pink */
-  --lightpink:#f8e6f1;
-  --black:#000;
+  --pink:#a85a8c;      /* muted purple-pink */
+  --light:#f7f1f6;
 }
 
 /* BASE */
@@ -19,25 +8,32 @@
 body{
   margin:0;
   font-family:'Eater', cursive;
-  background:#fdf6fb;
-  background-image: radial-gradient(#f3cce3 1px, transparent 1px);
-  background-size: 22px 22px;
+  background:var(--light);
+  background-image: radial-gradient(#e7d7e3 1px, transparent 1px);
+  background-size:24px 24px;
   overflow-x:hidden;
   color:black;
 }
 
-/* REAL LACE BORDER (SVG) */
+/* TOP + BOTTOM STITCHING (not lace) */
 
-.lace-top, .lace-bottom{
+.stitch{
   position:fixed;
   left:0;
   width:100%;
-  height:30px;
-  z-index:20;
+  height:8px;
+  background:repeating-linear-gradient(
+    90deg,
+    var(--pink),
+    var(--pink) 8px,
+    transparent 8px,
+    transparent 16px
+  );
+  z-index:1;
 }
 
-.lace-top{ top:0; }
-.lace-bottom{ bottom:0; transform:rotate(180deg); }
+.stitch.top{ top:0; }
+.stitch.bottom{ bottom:0; }
 
 /* TOP BAR */
 
@@ -64,13 +60,18 @@ body{
 .icon{
   font-size:24px;
   cursor:pointer;
+  transition:0.3s;
+}
+
+.icon:hover{
+  transform:scale(1.08);
 }
 
 .heart{
   color:var(--pink);
 }
 
-/* Custom bag */
+/* BAG */
 
 .bag{
   width:26px;
@@ -83,8 +84,8 @@ body{
 .sidebar{
   position:fixed;
   top:0;
-  left:-260px;
-  width:300px;
+  left:-210px;             /* thinner peek */
+  width:260px;             /* about 1/3 thinner */
   height:100%;
   background:var(--pink);
   padding-top:120px;
@@ -93,24 +94,43 @@ body{
   box-shadow:4px 0 20px rgba(0,0,0,0.2);
 }
 
-/* Sidebar sticks out slightly */
+/* thinner peek strip */
 .sidebar::after{
   content:"";
   position:absolute;
-  right:-25px;
+  right:-18px;
   top:0;
-  width:25px;
+  width:18px;
   height:100%;
   background:var(--pink);
 }
 
+/* lace ONLY on the peeking strip */
+.sidebar::before{
+  content:"";
+  position:absolute;
+  right:-18px;
+  top:0;
+  width:18px;
+  height:100%;
+  background:
+    radial-gradient(circle at 50% 0%, white 4px, transparent 5px),
+    radial-gradient(circle at 50% 20px, white 4px, transparent 5px);
+  background-size:18px 40px;
+  background-repeat:repeat-y;
+  opacity:0.5;
+}
+
+/* Sidebar links */
+
 .sidebar a{
   display:block;
   color:white;
-  padding:24px 40px;
+  padding:24px 35px;
   text-decoration:none;
-  font-size:20px;
+  font-size:19px;
   letter-spacing:2px;
+  transition:0.3s;
 }
 
 .sidebar a:hover{
@@ -124,26 +144,13 @@ body{
 .overlay{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,0.4);
+  background:rgba(0,0,0,0.35);
   display:none;
   z-index:10;
 }
 
 .overlay.active{
   display:block;
-}
-
-/* Lace edge on sidebar */
-
-.sidebar::before{
-  content:"";
-  position:absolute;
-  right:0;
-  top:0;
-  width:6px;
-  height:100%;
-  background:white;
-  opacity:0.4;
 }
 
 /* HERO */
@@ -153,23 +160,21 @@ body{
   justify-content:center;
   align-items:center;
   gap:60px;
-  padding:120px 60px;
+  padding:150px 60px;
   position:relative;
 }
 
-/* BIGGER mascot */
+/* Bigger mascot */
 
 .hero img{
-  width:520px;
-  max-width:50vw;
+  width:640px;             /* bigger */
+  max-width:58vw;
   animation:float 4s ease-in-out infinite;
-  filter:drop-shadow(0 0 35px rgba(209,75,143,0.45));
+  filter:drop-shadow(0 0 35px rgba(168,90,140,0.4));
   position:relative;
-  left:-40px; /* slight overlap */
+  left:-80px;
   z-index:3;
 }
-
-/* Float */
 
 @keyframes float{
   0%{transform:translateY(0px);}
@@ -177,13 +182,13 @@ body{
   100%{transform:translateY(0px);}
 }
 
-/* Text block overlaps */
+/* Text */
 
 .hero-text{
-  max-width:340px;
+  max-width:360px;
   position:relative;
-  left:-80px;
-  z-index:1;
+  left:-120px;
+  z-index:2;
 }
 
 .hero-text h1{
@@ -198,7 +203,7 @@ body{
   color:#555;
 }
 
-/* Rotating feature */
+/* Rotating text */
 
 .feature-box{
   margin-top:45px;
@@ -227,7 +232,7 @@ body{
   }
 
   .hero img{
-    width:320px;
+    width:380px;
     left:0;
   }
 
@@ -235,87 +240,3 @@ body{
     left:0;
   }
 }
-
-</style>
-</head>
-
-<body>
-
-<!-- Lace SVG Top -->
-<svg class="lace-top" viewBox="0 0 1440 40" preserveAspectRatio="none">
-  <path fill="#d14b8f" d="M0,20 Q20,0 40,20 T80,20 T120,20 T160,20 T200,20 T240,20 T280,20 T320,20 T360,20 T400,20 T440,20 T480,20 T520,20 T560,20 T600,20 T640,20 T680,20 T720,20 T760,20 T800,20 T840,20 T880,20 T920,20 T960,20 T1000,20 T1040,20 T1080,20 T1120,20 T1160,20 T1200,20 T1240,20 T1280,20 T1320,20 T1360,20 T1400,20 L1440,40 L0,40 Z"/>
-</svg>
-
-<svg class="lace-bottom" viewBox="0 0 1440 40" preserveAspectRatio="none">
-  <path fill="#d14b8f" d="M0,20 Q20,0 40,20 T80,20 T120,20 T160,20 T200,20 T240,20 T280,20 T320,20 T360,20 T400,20 T440,20 T480,20 T520,20 T560,20 T600,20 T640,20 T680,20 T720,20 T760,20 T800,20 T840,20 T880,20 T920,20 T960,20 T1000,20 T1040,20 T1080,20 T1120,20 T1160,20 T1200,20 T1240,20 T1280,20 T1320,20 T1360,20 T1400,20 L1440,40 L0,40 Z"/>
-</svg>
-
-<div class="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <a href="#">Skirts</a>
-  <a href="#">Dresses</a>
-  <a href="#">Tops</a>
-  <a href="#">Shorts</a>
-  <a href="#">Accessories</a>
-</div>
-
-<div class="topbar">
-  <div class="brand">gnawed</div>
-
-  <div class="right-icons">
-    <div class="icon" onclick="openMenu()">☰</div>
-    <div class="icon heart">♡</div>
-
-    <svg class="bag" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="1.8">
-      <path d="M6 8h12l-1 12H7L6 8z"/>
-      <path d="M9 8V6a3 3 0 016 0v2"/>
-    </svg>
-
-    <div class="icon">?</div>
-  </div>
-</div>
-
-<div class="hero">
-
-  <img src="mascot.png" alt="Mascot">
-
-  <div class="hero-text">
-    <h1>soft gothic. hand altered.</h1>
-    <p>one of one pieces reconstructed with romantic ruin and stitched sentiment.</p>
-
-    <div class="feature-box">
-      <div class="feature-item active">lace skirts</div>
-      <div class="feature-item">reworked dresses</div>
-      <div class="feature-item">altered tops</div>
-      <div class="feature-item">patchwork accessories</div>
-    </div>
-  </div>
-
-</div>
-
-<script>
-
-function openMenu(){
-  document.getElementById("sidebar").classList.add("active");
-  document.querySelector(".overlay").classList.add("active");
-}
-
-function closeMenu(){
-  document.getElementById("sidebar").classList.remove("active");
-  document.querySelector(".overlay").classList.remove("active");
-}
-
-let items=document.querySelectorAll(".feature-item");
-let index=0;
-
-setInterval(()=>{
-  items[index].classList.remove("active");
-  index=(index+1)%items.length;
-  items[index].classList.add("active");
-},2500);
-
-</script>
-
-</body>
-</html>
