--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
-:root{
-  --pink:#a85a8c;      /* muted purple-pink */
-  --light:#f7f1f6;
-}
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>gnawed</title>
 
-/* BASE */
+<link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
+
+<style>
+
+:root{
+  --pink:#a14e8a; /* muted purple pink */
+  --light:#fbf2f8;
+}
 
 body{
   margin:0;
   font-family:'Eater', cursive;
   background:var(--light);
-  background-image: radial-gradient(#e7d7e3 1px, transparent 1px);
-  background-size:24px 24px;
+  background-image: radial-gradient(#e8c6dc 1px, transparent 1px);
+  background-size:22px 22px;
   overflow-x:hidden;
   color:black;
 }
 
-/* TOP + BOTTOM STITCHING (not lace) */
+/* STITCH TOP + BOTTOM */
 
 .stitch{
   position:fixed;
   left:0;
   width:100%;
-  height:8px;
+  height:14px;
+  z-index:2;
   background:repeating-linear-gradient(
     90deg,
     var(--pink),
@@ -29,7 +38,6 @@ body{
     transparent 8px,
     transparent 16px
   );
-  z-index:1;
 }
 
 .stitch.top{ top:0; }
@@ -64,14 +72,12 @@ body{
 }
 
 .icon:hover{
-  transform:scale(1.08);
+  transform:scale(1.1);
 }
 
 .heart{
   color:var(--pink);
 }
-
-/* BAG */
 
 .bag{
   width:26px;
@@ -84,57 +90,53 @@ body{
 .sidebar{
   position:fixed;
   top:0;
-  left:-210px;             /* thinner peek */
-  width:260px;             /* about 1/3 thinner */
+  left:-200px; /* adjusted */
+  width:240px; /* thinner */
   height:100%;
   background:var(--pink);
   padding-top:120px;
   transition:0.4s;
   z-index:15;
-  box-shadow:4px 0 20px rgba(0,0,0,0.2);
+  box-shadow:4px 0 25px rgba(0,0,0,0.25);
 }
 
 /* thinner peek strip */
 .sidebar::after{
   content:"";
   position:absolute;
-  right:-18px;
+  right:-20px;
   top:0;
-  width:18px;
+  width:20px;
   height:100%;
   background:var(--pink);
 }
 
-/* lace ONLY on the peeking strip */
+/* lace only on peek strip */
 .sidebar::before{
   content:"";
   position:absolute;
-  right:-18px;
+  right:-20px;
   top:0;
-  width:18px;
+  width:20px;
   height:100%;
   background:
-    radial-gradient(circle at 50% 0%, white 4px, transparent 5px),
-    radial-gradient(circle at 50% 20px, white 4px, transparent 5px);
-  background-size:18px 40px;
-  background-repeat:repeat-y;
-  opacity:0.5;
+    radial-gradient(circle at 50% 0%, white 60%, transparent 61%) 0 0/20px 20px repeat-y;
+  opacity:0.6;
 }
-
-/* Sidebar links */
 
 .sidebar a{
   display:block;
   color:white;
-  padding:24px 35px;
+  padding:24px 40px;
   text-decoration:none;
-  font-size:19px;
+  font-size:20px;
   letter-spacing:2px;
   transition:0.3s;
 }
 
 .sidebar a:hover{
-  background:rgba(255,255,255,0.15);
+  background:rgba(255,255,255,0.2);
+  text-shadow:0 0 8px rgba(255,255,255,0.8);
 }
 
 .sidebar.active{
@@ -144,7 +146,7 @@ body{
 .overlay{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,0.35);
+  background:rgba(0,0,0,0.4);
   display:none;
   z-index:10;
 }
@@ -159,20 +161,20 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  gap:60px;
-  padding:150px 60px;
+  gap:0;
+  padding:160px 60px;
   position:relative;
 }
 
-/* Bigger mascot */
+/* MASCOT BIGGER + OVERLAP */
 
 .hero img{
-  width:640px;             /* bigger */
-  max-width:58vw;
+  width:650px;
+  max-width:60vw;
   animation:float 4s ease-in-out infinite;
-  filter:drop-shadow(0 0 35px rgba(168,90,140,0.4));
+  filter:drop-shadow(0 0 50px rgba(161,78,138,0.4));
   position:relative;
-  left:-80px;
+  left:-40px;
   z-index:3;
 }
 
@@ -182,12 +184,12 @@ body{
   100%{transform:translateY(0px);}
 }
 
-/* Text */
+/* TEXT */
 
 .hero-text{
   max-width:360px;
   position:relative;
-  left:-120px;
+  left:-160px; /* pulls text under mascot slightly */
   z-index:2;
 }
 
@@ -203,7 +205,7 @@ body{
   color:#555;
 }
 
-/* Rotating text */
+/* ROTATING TEXT */
 
 .feature-box{
   margin-top:45px;
@@ -232,7 +234,7 @@ body{
   }
 
   .hero img{
-    width:380px;
+    width:360px;
     left:0;
   }
 
@@ -240,3 +242,81 @@ body{
     left:0;
   }
 }
+
+</style>
+</head>
+
+<body>
+
+<div class="stitch top"></div>
+<div class="stitch bottom"></div>
+
+<div class="overlay" onclick="closeMenu()"></div>
+
+<div class="sidebar" id="sidebar">
+  <a href="#">Skirts</a>
+  <a href="#">Dresses</a>
+  <a href="#">Tops</a>
+  <a href="#">Shorts</a>
+  <a href="#">Accessories</a>
+</div>
+
+<div class="topbar">
+  <div class="brand">gnawed</div>
+
+  <div class="right-icons">
+    <div class="icon" onclick="openMenu()">☰</div>
+    <div class="icon heart">♡</div>
+
+    <svg class="bag" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="1.8">
+      <path d="M6 8h12l-1 12H7L6 8z"/>
+      <path d="M9 8V6a3 3 0 016 0v2"/>
+    </svg>
+
+    <div class="icon">?</div>
+  </div>
+</div>
+
+<div class="hero">
+
+  <img src="mascot.png" alt="Mascot">
+
+  <div class="hero-text">
+    <h1>soft gothic. hand altered.</h1>
+    <p>one of one pieces reconstructed with romantic ruin and stitched sentiment.</p>
+
+    <div class="feature-box">
+      <div class="feature-item active">lace skirts</div>
+      <div class="feature-item">reworked dresses</div>
+      <div class="feature-item">altered tops</div>
+      <div class="feature-item">patchwork accessories</div>
+    </div>
+  </div>
+
+</div>
+
+<script>
+
+function openMenu(){
+  document.getElementById("sidebar").classList.add("active");
+  document.querySelector(".overlay").classList.add("active");
+}
+
+function closeMenu(){
+  document.getElementById("sidebar").classList.remove("active");
+  document.querySelector(".overlay").classList.remove("active");
+}
+
+let items=document.querySelectorAll(".feature-item");
+let index=0;
+
+setInterval(()=>{
+  items[index].classList.remove("active");
+  index=(index+1)%items.length;
+  items[index].classList.add("active");
+},2500);
+
+</script>
+
+</body>
+</html>
